# MADA

./: .gitignore  MADA_config.json  MADA_config_hamada.json  MADA_config_ofuji.json  README.md  board.sh  setup.sh
adalm_controll/: adalm_controll.py  findADALM2000.py
config/: LV_config.json  MADA_config.json  MADA_config_SKEL.json  MADAanalyzer_config.json  base_correct_null.dac
config/DAClog/: 20210929-000122  20210929-000124  20210929-000126  20210929-000127
config/GBKB-00/: base_correct.dac
config/GBKB-00/20210713/: base_correct2.dac
config/GBKB-00/20210928/: base_correct.dac
config/GBKB-00/20220127/: base_correct_run0006.dac
config/GBKB-00/20220405/: base_correct_run0001.dac
config/GBKB-01/20210713/: base_correct.dac
config/GBKB-01/20210928/: base_correct2.dac  base_correct3.dac
config/GBKB-01/20220127/: base_correct_run0008.dac
config/GBKB-01/20220405/: base_correct_run0008.dac
config/GBKB-03/20210713/: base_correct2.dac
config/GBKB-10/20210713/: base_correct2.dac
config/GBKB-10/20210928/: base_correct2.dac
config/GBKB-10/20220127/: base_correct_run0014.dac
config/GBKB-10/20220405/: base_correct_run0000.dac  base_correct_run0006.dac  base_correct_run0016.dac  base_correct_run0017.dac
config/GBKB-11/20210928/: base_correct2.dac
config/GBKB-11/20220127/: base_correct_run0013.dac
config/GBKB-11/20220405/: base_correct_run0010.dac  base_correct_run0015.dac  base_correct_run0018.dac
config/config/: MADA_config.json  MADA_config_SKEL.json.202107  MADA_config_SKEL.json.20210913  MADA_config_SKEL.json.20210928  MADA_config_SKEL.json.20211004  MADA_config_SKEL.json.20250811
pythonlib/: MADA_defs.py  MADA_util.py
rootmacro/: DACValueCorrection.cxx  ShowVth_skel.cxx
script/: auto_mada.py
source/: ADALMs.txt  CMakeLists.txt  DAQcheck.cxx  GPIOUtil.cxx  GPIOUtil.h  GigaDAQ.cxx  MACARON_DAQCtrl.cxx  MADA.cpp  MADA_DACAna.cxx  MADA_DACScan.cxx  MADA_DAQenable.cpp  MADA_VthAna.cxx  MADA_VthScan.cxx  MADA_ad.cpp  MADA_ad.hpp  MADA_con.cpp  MADA_counterreset.cpp  MADA_iwaki.cpp  MADA_iwaki.hpp  MADA_withoperation.cpp  Makefile  RBCP.cxx  RBCP.h  SetDAC.cxx  SetVth.cxx  SiTCP.cxx  SiTCP.h  TCPclient.cxx  TCPclient.h  makefile  readIwaki.cpp  read_CtrlMem.cxx
source/MACARON/: CMakeLists.txt  GPIOUtil.h  MACARON_CheckStatus.cxx  MACARON_CntReset.cxx  MACARON_DAQCtrl.cxx  MACARON_SWVeto.cxx  MACARON_TPMode.cxx  MACARON_runScaler.cxx
source/MAQS/: CMakeLists.txt  MADA_DACAna.cxx  MADA_DACScan.cxx  MADA_VthScan.cxx  MADA_iwaki.cpp  SetDAC.cxx  SiTCP.cxx  TCPclient.h
